<resources>
    <string name="app_name">Medicine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_medicine">My Medicine</string>
    <string name="expired">Expired</string>
    <string name="unused">Unused</string>
    <string name="buy">Buy</string>
    <string name="profile">Profile</string>
    <string name="i_am_a">I am a</string>
    <string name="chemist">Chemist</string>
    <string name="customer">Customer</string>
    <string name="welcome_nback">Welcome\nBack</string>
    <string name="enter_your_login_credentials">Enter your login credentials</string>
    <string name="email">Email</string>
    <string name="set_8_character_password">Set 8 character password</string>
    <string name="new_to_our_app_sign_up">New to our app? Sign up</string>
    <string name="login">Login</string>
    <string name="register_nas_a_ncustomer">Register \nAs A \nCustomer</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="register">Register</string>
    <string-array name="india_states">
        <item>Select state</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="daman_and_diu_cities_array">
        <item>Select your city</item>
        <item>Daman</item>
        <item>Diu</item>
    </string-array>
    <string-array name="dadar_and_nagar_haveli_cities_array">
        <item>Select your city</item>
        <item>Dadra</item>
        <item>Masat</item>
        <item>Naroli</item>
        <item>Rakholi</item>
        <item>Samarvarni</item>
        <item>Silvassa</item>
    </string-array>
    <string-array name="none">
        <item>Select your city</item>
    </string-array>
    <string name="title_activity_customer_navigation">CustomerNavigationActivity</string>
    <string name="title_activity_seller_navigation">SellerNavigationActivity</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sellers">Sellers</string>
    <string name="sort">sort</string>
    <string name="filter">Filter</string>
    <string name="rs_jar">Rs/Jar</string>
    <string name="price">Price</string>
    <string name="rating_ascending">Rating (Ascending)</string>
    <string name="rating_descending">Rating (Descending)</string>
    <string name="customers">Customers</string>
    <string name="customer_count">Customer Count</string>
    <string name="manage_jars">Manage Orders</string>
    <string name="amount_to_pay"><![CDATA[Amount to pay->]]></string>
    <string name="get_pay_as_you_go_orders">Get Pay As You Go Orders</string>
    <string name="no_orders_found">No Orders Found</string>
    <string name="no_sellers_found">No Sellers Found</string>
    <string name="password_8_characters">Password (8 characters)</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="update_profile">Update Profile</string>
    <string name="log_out">Log Out</string>
    <string name="payment">Payment</string>
    <string name="seller_details">Seller details</string>
    <string name="seller_name">Seller Name</string>
    <string name="customer_details">Customer details</string>
    <string name="delivery_address">Delivery address</string>
    <string name="jar_quantity">Jar Quantity</string>
    <string name="pay_using_razor_pay">Pay using razor pay</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_type">Order type</string>
    <string name="monthly_order">Monthly Orders</string>
    <string name="pay_as_you_go_order">Pay as you go orders</string>
    <string name="d">+</string>
    <string name="ds">-</string>
    <string name="zero">0</string>
    <string name="confirm_order">Confirm order</string>
    <string name="jars_nleft">Water Jars\nLeft</string>
    <string name="customer_ncount">Customer\nCount</string>
    <string name="total_orders">Total orders</string>
    <string name="code_nverification">Code verification</string>
    <string name="verify">Verify</string>
    <string name="register_as_a_chemist">Register As A Chemist</string>
    <string name="shop_name">Shop name</string>
    <string name="owner_name">Owner name</string>
    <string name="unique_id">Unique Id</string>
    <string name="medicine_name">Medicine name</string>
    <string name="expired_medicine">Expired Medicine</string>
    <string name="manufacture_date">Manufacture date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="add_to_list">Add to list</string>
    <string name="delete">Delete</string>
    <string-array name="andaman_nicobar_cities_array">
        <item>Select your city</item>
        <item>Port Blair</item>
    </string-array>
    <string-array name="andhra_pradesh_cities_array">
        <item>Select your city</item>
        <item>Adilabad</item>
        <item>Adoni</item>
        <item>Alwal</item>
        <item>Anakapalle</item>
        <item>Anantapur</item>
        <item>Bapatla</item>
        <item>Belampalli</item>
        <item>Bhimavaram</item>
        <item>Bhongir</item>
        <item>Bobbili</item>
        <item>Bodhan</item>
        <item>Chilakalurupet</item>
        <item>Chinna Chawk</item>
        <item>Chirala</item>
        <item>Chittur</item>
        <item>Cuddapah</item>
        <item>Dharmavaram</item>
        <item>Dhone</item>
        <item>Gaddiannaram</item>
        <item>Gadwal</item>
        <item>Gajuwaka</item>
        <item>Gudivada</item>
        <item>Gudur</item>
        <item>Guntakal</item>
        <item>Guntur</item>
        <item>Hindupur</item>
        <item>Hyderabad</item>
        <item>Jagtial</item>
        <item>Kadiri</item>
        <item>Kagaznagar</item>
        <item>Kakinada</item>
        <item>Kallur</item>
        <item>Kamareddi</item>
        <item>Kapra</item>
        <item>Karimnagar</item>
        <item>Karnul</item>
        <item>Kavali</item>
        <item>Khammam</item>
        <item>Kodar</item>
        <item>Kondukur</item>
        <item>Koratla</item>
        <item>Kottagudem</item>
        <item>Kukatpalle</item>
        <item>Lalbahadur Nagar</item>
        <item>Machilipatnam</item>
        <item>Mahbubnagar</item>
        <item>Malkajgiri</item>
        <item>Mancheral</item>
        <item>Mandamarri</item>
        <item>Mangalagiri</item>
        <item>Markapur</item>
        <item>Miryalaguda</item>
        <item>Nalgonda</item>
        <item>Nandyal</item>
        <item>Narasapur</item>
        <item>Narasaraopet</item>
        <item>Nellur</item>
        <item>Nirmal</item>
        <item>Nizamabad</item>
        <item>Nuzvid</item>
        <item>Ongole</item>
        <item>Palakollu</item>
        <item>Palasa</item>
        <item>Palwancha</item>
        <item>Patancheru</item>
        <item>Piduguralla</item>
        <item>Ponnur</item>
        <item>Proddatur</item>
        <item>Qutubullapur</item>
        <item>Rajamahendri</item>
        <item>Rajampet</item>
        <item>Rajendranagar</item>
        <item>Ramachandrapuram</item>
        <item>Ramagundam</item>
        <item>Rayachoti</item>
        <item>Rayadrug</item>
        <item>Samalkot</item>
        <item>Sangareddi</item>
        <item>Sattenapalle</item>
        <item>Serilungampalle</item>
        <item>Siddipet</item>
        <item>Sikandarabad</item>
        <item>Sirsilla</item>
        <item>Srikakulam</item>
        <item>Srikalahasti</item>
        <item>Suriapet</item>
        <item>Tadepalle</item>
        <item>Tadepallegudem</item>
        <item>Tadpatri</item>
        <item>Tandur</item>
        <item>Tanuku</item>
        <item>Tenali</item>
        <item>Tirupati</item>
        <item>Tuni</item>
        <item>Uppal Kalan</item>
        <item>Vijayawada</item>
        <item>Vinukonda</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>Vuyyuru</item>
        <item>Wanparti</item>
        <item>Warangal</item>
        <item>Yemmiganur</item>
    </string-array>
    <string-array name="arunachal_pradesh_cities_array">
        <item>Select your city</item>
        <item>Itanagar</item>
    </string-array>
    <string-array name="assam_cities_array">
        <item>Select your city</item>
        <item>Barpeta</item>
        <item>Bongaigaon</item>
        <item>Dhuburi</item>
        <item>Dibrugarh</item>
        <item>Diphu</item>
        <item>Guwahati</item>
        <item>Jorhat</item>
        <item>Karimganj</item>
        <item>Lakhimpur</item>
        <item>Lanka</item>
        <item>Nagaon</item>
        <item>Sibsagar</item>
        <item>Silchar</item>
        <item>Tezpur</item>
        <item>Tinsukia</item>
    </string-array>
</resources>