<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_medicine"
            android:icon="@drawable/ic_baseline_medical_services_24"
            android:title="@string/my_medicine" />
        <item
            android:id="@+id/expired"
            android:icon="@drawable/ic_baseline_auto_fix_off_24"
            android:title="@string/expired" />
        <item
            android:id="@+id/unused"
            android:icon="@drawable/ic_baseline_delete_sweep_24"
            android:title="@string/unused" />
        <item
            android:id="@+id/buy"
            android:icon="@drawable/ic_baseline_shopping_bag_24"
            android:title="@string/buy"/>
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile"/>
    </group>
</menu>