<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/my_medicine">

    <fragment
        android:id="@+id/my_medicine"
        android:name="com.example.medicine.ui.my_medicine.MyMedicineFragment"
        android:label="@string/my_medicine"
        tools:layout="@layout/fragment_my_medicine" />

    <fragment
        android:id="@+id/expired"
        android:name="com.example.medicine.ui.expired.ExpiredFragment"
        android:label="@string/expired"
        tools:layout="@layout/fragment_expired" />

    <fragment
        android:id="@+id/unused"
        android:name="com.example.medicine.ui.unused.UnusedFragment"
        android:label="@string/unused"
        tools:layout="@layout/fragment_unused" />

    <fragment
        android:id="@+id/buy"
        android:name="com.example.medicine.ui.buy.BuyFragment"
        android:label="@string/buy"
        tools:layout="@layout/fragment_buy"/>

    <fragment
        android:id="@+id/profile"
        android:name="com.example.medicine.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>


</navigation>