<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"

    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/medicine_header"
        android:scaleType="centerCrop"
        android:paddingTop="@dimen/nav_header_vertical_spacing"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/nav_header_title"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_above="@id/email"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:text="@string/nav_header_subtitle" />
</RelativeLayout>