<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/medicineName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medicine_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/manufactureDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/manufacture_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/manufactureDateCalendar"
            android:layout_weight=".2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_calendar_month_24"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expiryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expiry_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/expiryDateCalendar"
            android:layout_weight=".2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_calendar_month_24"/>
    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addToList"
        android:text="@string/add_to_list"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

</LinearLayout>