<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.ChooseRoleActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/i_am_a"
        android:textAlignment="center"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical">
        <RelativeLayout
            android:id="@+id/chemist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:background="@drawable/relative_layout_shape"
            android:gravity="center">

            <ImageView
                android:id="@+id/chemistImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:src="@drawable/chemist" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/chemistImage"
                android:text="@string/chemist"
                android:textAlignment="center"
                android:maxLines="1"
                android:textAllCaps="true"
                android:layout_margin="15dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="5dp"
            android:background="@drawable/relative_layout_shape"
            android:gravity="center">

            <ImageView
                android:id="@+id/customerImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:src="@drawable/customer" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/customerImage"
                android:text="@string/customer"
                android:textAlignment="center"
                android:maxLines="1"
                android:textAllCaps="true"
                android:layout_margin="15dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>